# libnetm2

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yml
src/: branches.rs  cryptography.rs  lib.rs  network.rs  protos.rs  systems.rs
src/branches/: standard.rs  standard_dynamic.rs
src/branches/cnprotos/network/packets/synchronization/: phase.capnp
src/cryptography/: ciphers.rs  kem.rs  methods.rs
src/cryptography/ciphers/: algorithms.rs
src/cryptography/ciphers/algorithms/: blowfish.rs  twofish.rs
src/cryptography/kem/: dh.rs
src/cryptography/kem/dh/: group.rs
src/cryptography/methods/: dhe.rs  ecdhe.rs  xtea.rs
src/cryptography/methods/dhe/: cipher.rs  packets.rs
src/cryptography/methods/ecdhe/: packets.rs
src/cryptography/methods/xtea/: packets.rs
src/network/: authentication.rs  client.rs  connection.rs  integrity.rs  packets.rs  vials.rs
src/network/connection/: channel.rs  settings.rs
src/network/integrity/: encryption.rs  handshake.rs  synchrony.rs
src/network/integrity/encryption/: ipe_dhe.rs  ipe_xtea.rs
src/network/integrity/synchrony/: handshake.rs  phase.rs
src/network/integrity/synchrony/handshake/: hand.rs  left_hand.rs  packet.rs  right_hand.rs
src/network/packets/: dynamic_manager.rs  manager.rs  packet.rs
src/network/vials/: base.rs  client.rs  server.rs
src/network/vials/base/: net.rs
src/network/vials/client/: channel.rs
src/protos/network/packets/: login.proto
src/protos/network/packets/synchronization/: phase.proto
src/systems/authentication/: basic.rs
tests/: client.rs  test.rs
(+3 files in other folders)
