[package]
name = "libnetm2"
version = "0.1.0"
edition = "2021"

[lib]
name="libnetm2"
crate-type = ["rlib", "dylib"]


[dependencies]
derive-new = "0.5.9"
derive_builder = "0.11.2"
prost = "0.11.0"
protobuf = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.141", features = ["derive"] }
netm2_macros = { version="0.1.0", path="../netm2_macros" }
crypto = "0.4.0"
cipher = { version = "0.4.3", features = ["std", "rand_core", "zeroize", "alloc"] }
blowfish = { version = "0.9.1", features = ["zeroize"] }
twofish = { version = "0.7.1", features = ["zeroize"] }
p256 = { version = "0.11.1", features = ["ecdh"] }
downcast-rs = "1.2.0"
enum_dispatch = "0.3.8"
strum = { version = "0.24.1", features = ["derive"] }

[build-dependencies]
prost-build = "0.11.0"


#[features]
#default = ["std"]
#std = []
